Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 5.0.0-beta1
-
21115ae5118dafcf3ac9b7558761cd3925842236 (qt-creator/qt-creator/5.0)
Description
In Creator 5 the "Build" menu has reordered its items. Before, the first option (and most useful) was "Build All". Not it's "Build for Run Configuration <run_configuration>". For those using keyboard shortcuts to invoke the "Build All" action nothing changes in fact. For those using Build menu - they blindly select the first item. And in this case the build e.g. doesn't notice changes to files (see QTCREATORBUG-25928). Please keep the "Build All" action as the first action in the Build menu.
Attachments
Issue Links
- resulted from
-
QTCREATORBUG-25928 Regression: Creator doesn't notice changes to files
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-25948 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
358002,2 | Keep "Build All Projects" the first item | 5.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |