Keep "Build All Projects" the first item

like it was before the re-arrangement.

Amends 3bd490acdb41d287c1870a8b064b92a858d35352

Fixes: QTCREATORBUG-25948
Change-Id: Ia4bd97c95d2976cd52bfcbd40389f6c7360c8109
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>